# MetaBridge

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: bench.py  client.py  service_daemon.py
src/: __init__.py  client.py  exceptions.py  registry.py  server.py
src/metabridge/: __init__.py  config.py  exceptions.py  logger.py  server.py
